# win32ole-rs

./: Cargo.toml
src/: dispatch.rs  error.rs  lib.rs  main.rs  oledata.rs  oleeventdata.rs  olemethoddata.rs  oleparam.rs  oleparamdata.rs  oletypedata.rs  oletypelibdata.rs  olevariabledata.rs  types.rs  util.rs  variant.rs
src/util/: conv.rs  mod.rs  ole.rs  registry.rs
