[package]
name = "win32ole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs.git"
features = [
    "implement",
    "Win32_Data_HtmlHelp",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies]
clap = { version = "4", features = ["derive"] }